# tbai_isaac

./: .gitignore  README.md  pyproject.toml  setup.py
container/: Dockerfile  README.md  helper.bash  setup.bash
src/tbai_isaac/anymal_d/: info.py
src/tbai_isaac/anymal_d/blind/: config.py  distill_blind.py
src/tbai_isaac/anymal_d/common/: central_pattern_generator.py  observation.py
src/tbai_isaac/anymal_d/dtc/: agent.py  config.yaml  config_basic.yaml  config_w_noise.yaml  env.py  env_backup.py  env_w_default_angles.py  env_w_default_angles_w_noise.py  env_w_optimized_angles_w_noise.py  export_jitted.py  int.py  ocs2_interface.py  play.py  test.py  train.py  train2.py
src/tbai_isaac/anymal_d/perceptive/: config.yaml  distill.py  env.py  play.py  teacher.py  train.py
src/tbai_isaac/common/: args.py  base_env.py  config.py  logging.py  observation.py  reward.py  terrain.py  utils.py  writers.py
src/tbai_isaac/ppo/: coach.py
src/tbai_isaac/tests/: test_config.py  test_observation_manager.py
tbai_isaac/anymal_d/blind/: config.py
tbai_isaac/anymal_d/common/: central_pattern_generator.py  noise_model.py
tbai_isaac/anymal_d/dtc/: env.py  export_jitted.py  ocs2_interface.py
tbai_isaac/anymal_d/perceptive/: config.yaml  distill.py
tbai_isaac/anymal_d/resources/meshes/: shank_l.dae  shank_r.dae
tbai_isaac/common/: config.py  math.py  terrain.py  utils.py
tbai_isaac/envs/anymal_d/blind/: distill_blind.py  student_blind.py
tbai_isaac/envs/go2/: info.py
tbai_isaac/ppo/: algorithm.py  storage.py
tbai_isaac/tests/: test_config.py  test_math.py
(+48 files in other folders)
