[project]
name="tbai_isaac"
version="0.0.1"
requires-python = ">=3.8"
dependencies = [
    "lxml",
    "omegaconf"
    "rich"
]

[options]
package_dir="src"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "scipy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Development
[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I001", "E501"]

# isort rules:
# I001: unsorted-imports

# pycodestyle rules:
# E501: line-too-long

# All rules available at: https://docs.astral.sh/ruff/rules/

[tool.pytest.ini_options]
addopts = "--ignore=dependencies"   
